--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   image_picker: ^1.1.2
   call_log: ^5.1.0
   permission_handler: ^12.0.0+1
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
